--- a/src/routes/global.scss
+++ b/src/routes/global.scss
@@ -14,3 +14,9 @@ header,
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
+
+img {
+	display: block;
+	max-width: 100%;
+	object-fit: cover;
+}
