--- a/src/routes/global.scss
+++ b/src/routes/global.scss
@@ -1,16 +1,31 @@
+* {
+	box-sizing: border-box;
+}
+
+html,
 body {
+	height: 100%;
+}
+
+body {
+	margin: 0;
 	color: whitesmoke;
 	background-color: #1b1b1b;
 }
 
-header,
-.container {
-	max-width: 800px;
-	margin: 0 auto;
+.wrapper {
+	min-height: 100%;
+	min-height: 100svh;
+	display: grid;
+	grid-template-columns:
+		minmax(1rem, 1fr)
+		minmax(0, 900px)
+		minmax(1rem, 1fr);
+	grid-template-rows: auto 1fr auto;
+	grid-template-areas: '. content .';
 }
 
 .container {
-	margin: 6rem auto;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
@@ -18,15 +33,17 @@ header,
 img {
 	display: block;
 	max-width: 100%;
+	height: 100%;
 	object-fit: cover;
 }
 
 a {
 	color: blueviolet;
 	text-decoration: none;
+	border-bottom: 3px solid transparent;
 }
 
-:not([aria-current='page'])a:hover {
+:not([aria-current='page'])nav a:hover {
 	border-bottom: 3px solid white;
 }
 
