💄 moved global styles folder

--- a/src/lib/sass/global.scss
+++ b/src/lib/sass/global.scss
@@ -1,7 +1,13 @@
 :root {
+	//Colors
+
+	//Headings/Titles
 	--title-sm: 0.75rem;
 	--title-md: 1.75rem;
-	--title-lg: 2.15rem;
+	--title-lg: 2.35rem;
+
+	//paragraph/fonts
+	--text-lg: 2rem;
 }
 
 * {
