🔧 better naming for variation dataSets

--- a/src/lib/sass/global.scss
+++ b/src/lib/sass/global.scss
@@ -84,7 +84,7 @@ body {
 }
 
 .wrap-full,
-[data-slice-variation*='full'] {
+[data-slice-variation*='Full'] {
 	grid-column: full;
 	display: grid;
 	grid-template-columns: inherit;
