--- a/src/lib/sass/global.scss
+++ b/src/lib/sass/global.scss
@@ -20,7 +20,7 @@
 	--section-min: ;
 
 	--primary-clr: ;
-	--primary-bg: ;
+	--primary-bg: #1b1b1b;
 	--secondary-clr: ;
 	--secondary-bg: black;
 	--highlight-clr: ;
@@ -51,7 +51,7 @@
 
 	--gap-lg: ;
 	--gap-md: ;
-	--gap-sm: ;
+	--gap-sm: 16px;
 
 	--radius-img: ;
 	--radius-btn: ;
@@ -59,10 +59,12 @@
 	--radius-inner: ;
 }
 
-//> defaults
+//worst perf selector .. when do I need to assign it to elements if I'm grid wrapped?
 * {
 	box-sizing: border-box;
 }
+
+//> defaults
 
 html,
 body {
@@ -74,7 +76,7 @@ body {
 	color: whitesmoke;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-	background-color: #1b1b1b;
+	background-color: var(--primary-bg);
 }
 
 img {
@@ -128,11 +130,15 @@ p + p {
 	display: grid;
 	grid-template-columns:
 		[full-start]
-		minmax(1rem, 1fr)
+		minmax(var(--gap-sm), 1fr)
+		[popout-start]
+		minmax(0, 0.25fr)
 		[content-start]
 		minmax(0, var(--content-max))
 		[content-end]
-		minmax(1rem, 1fr)
+		minmax(0, 0.25fr)
+		[popout-end]
+		minmax(var(--gap-sm), 1fr)
 		[full-end];
 	grid-template-rows: auto 1fr auto;
 }
@@ -144,10 +150,12 @@ p + p {
 	grid-template-columns: inherit;
 }
 
+.wrap-pop {
+	grid-column: popout;
+}
+
 .wrap-content {
 	grid-column: content;
-	// display: grid;
-	// grid-template-columns: inherit;
 }
 
 .container {
