--- a/src/lib/sass/global.scss
+++ b/src/lib/sass/global.scss
@@ -1,6 +1,16 @@
 :root {
 	//colors
+	--blue-1: 216, 100%, 2%;
+	--blue-3: 211, 100%, 5%;
+	--blue-5: 209, 100%, 20%;
+	
+	--purple-1: #2b2d42;
+	
+	--white-1: #edf2f4;
+	--white-2: #edede9;
 
+	--yellow-5: 46, 100%, 50%;
+	--yellow-6: 50, 100%, 52%;
 	//paragraph/fonts
 	--fs-1: 0.5rem;
 	--fs-2: 0.75rem;
@@ -25,13 +35,21 @@
 	--section-max: ;
 	--section-min: ;
 
-	--brand-clr: ;
-	--primary-clr: blueviolet;
-	--primary-bg: #1b1b1b;
+	// --brand-clr: ;
+
+	--primary-clr: hsl(var(--yellow-5));
+	--primary-alt: hsl(var(--yellow-6));
+	--primary-bg: hsl(var(--blue-1));
+
 	--secondary-clr: ;
-	--secondary-bg: black;
+	--secondary-bg: hsl(var(--blue-3));
+	--secondary-alt: hsl(var(--blue-5));
+
 	--highlight-clr: ;
 	--highlight-bg: ;
+
+	--font-clr: var(--white-1);
+	--font-clr-alt: var(--white-2);
 
 	--shadow-cat: ;
 	--shadow-box: ;
@@ -53,7 +71,7 @@
 	--spacer-xl: 2.5rem;
 	--spacer-lg: 8rem;
 	--spacer-md: 2.5rem;
-	--spacer-sm: 1rem;
+	--spacer-sm: 1.5rem;
 	--spacer-xs: 0.25rem;
 
 	@media (max-width: 600px) {
@@ -65,8 +83,15 @@
 	--gap-sm: 16px;
 	--gap-xs: 8px;
 
-	--pad-block: 0.25rem;
-	--pad-inline: 1rem;
+	--pad-block: 0.45rem;
+	--pad-inline: 1.2rem;
+	--pad-box: calc(--pad-inline * 2);
+	--pad-squish: var(--pad-block) var(--pad-inline);
+	
+	--btn-pad: var(--pad-squish);
+	--btn-out:
+		calc(var(--pad-block) - var(--border-sm))
+		calc(var(--pad-inline) - var(--border-sm));
 
 	--border-sm: 2px;
 	--border-md: 4px;
@@ -108,23 +133,57 @@ img {
 
 a {
 	color: var(--primary-clr);
-	text-decoration: none;
+	transition: text-decoration 0.2s ease-in-out;
 
 	&:hover {
-		text-decoration: underline;
+		// text-decoration: none;
+		text-decoration-thickness: 0.4rem;
+		text-underline-offset: -0.4rem;
 	}
 }
 
-//safety border
-//need to make a token for borders
+//todo abstract to comp.. its time
 nav a {
+	position: relative;
 	padding-block-end: 0.25rem;
 	border-bottom: 0.15em solid transparent;
+	color: var(--font-clr);
+	text-decoration: none;
+	transition: border 0.2s ease-in-out, color 0.5s;
+	
+	&:hover {
+		color: var(--primary-alt);
+	}
+
+	&::after {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: -0.15em;
+			min-width: 100%;
+			border-bottom: 0.15em solid var(--white-1);
+			transform: scaleX(0);
+			transform-origin: right;
+			// needs more support?
+			// translate: 0 0.1em;
+			// scale: 0 1;
+			transition: transform  220ms ease-in, border 220ms;
+			pointer-events: none;
+			z-index: 1;
+		}
+
+		&:hover::after,
+		&:focus::after {
+			transform: scaleX(1);
+			transform-origin: left;
+			// scale: 1 1;
+			border-bottom: 0.15em solid var(--primary-clr);
+		}
 }
 
 :not([aria-current='page']) nav a:hover {
 	text-decoration: none;
-	border-bottom: 0.15em solid white;
+	// border-bottom: 0.15em solid white;
 }
 
 nav a[aria-current='page'] {
@@ -136,20 +195,10 @@ p {
 	line-height: 1.2;
 }
 
-h1:first-child {
-	margin-block-end: 0.7rem;
-	line-height: 1.3;
-}
-
-//mustache  
-p ~ h1 {
-	margin-block-start: 0.1rem;
-}
-
-header p:first-child {
-	// color: var(--text-clr, grey);
-  font-size: var(--text-sm);	
-	opacity: 0.69;
+h1 {
+	margin-block-start: 0;
+	margin-block-end: var(--spacer-sm);
+	line-height: 1.1;
 }
 
 p + p {
@@ -157,8 +206,17 @@ p + p {
 }
 
 //not really using.. clean up isle 156
+//need to use some sort of `flow` system
 .spacer > * + * {
 	margin-block-start: var(--spacer-sm);
+}
+
+section:first-of-type {
+	padding-block-start: 0;
+}
+
+section + section {
+	padding-block: var(--spacer-lg);
 }
 
 //> utils
@@ -201,17 +259,22 @@ p + p {
 	grid-column: content;
 }
 
+//above headings
+.mustache {
+	color: var(--font-clr-alt);
+	font-size: var(--text-sm);
+	margin-block-end: var(--spacer-xs);
+}
+
 .btn {
-	--pad-block: 0.35rem;
-	--pad-inline: 1.2rem;
 	max-width: max-content;
-	padding-block: var(--pad-block);
-	padding-inline: var(--pad-inline);
+	padding: var(--btn-pad);
 	display: inline-grid;
 	place-items: center;
-	color: var(--white, white);
-	font-weight: 600;
+	color: var(--primary-bg);
+	font-weight: var(--fw-bold);
 	text-transform: capitalize;
+	text-decoration: none;
 
 	&:hover {
 		text-decoration: none;
@@ -220,14 +283,14 @@ p + p {
 	&-primary {
 		@extend .btn;
 		border-radius: var(--radius-btn);
-		background-color: var(--primary-clr, blueviolet);
+		background-color: var(--primary-clr);
 	}
 
 	&-secondary {
 		@extend .btn;
-		padding-block: calc(var(--pad-block) - var(--border-sm));
-		padding-inline: calc(var(--pad-inline) - var(--border-sm));
-		border: var(--border-sm, 3px) solid var(--primary-clr);
+		padding: var(--btn-out);
+		color: var(--primary-alt);
+		border: var(--border-sm) solid var(--primary-clr);
 		border-radius: var(--radius-btn);
 	}
 }
