--- a/src/lib/sass/global.scss
+++ b/src/lib/sass/global.scss
@@ -4,10 +4,19 @@
 	--blue-3: 211, 100%, 5%;
 	--blue-5: 209, 100%, 20%;
 	
-	--purple-1: #2b2d42;
+	--purple-1: 222, 18%, 11%;
+	--purple-2: 231, 18%, 16%;
+	--purple-3: 231, 18%, 28%;
+	--purple-4: 240, 16%, 65%;
+	--purple-5: 240, 24%, 74%;
+	--purple-6: 240, 100%, 92%;
 	
-	--white-1: #edf2f4;
-	--white-2: #edede9;
+	--white-1: 197, 24%, 94%;
+	--white-2: 60, 10%, 92%;
+	
+	--orange-1: 11, 61%, 42%;
+	--orange-3: 11, 96%, 61%;
+	--orange-5: 19, 100%, 62%;
 
 	--yellow-5: 46, 100%, 50%;
 	--yellow-6: 50, 100%, 52%;
@@ -25,31 +34,32 @@
 	--fw-bold: 600;
 	--fw-bolder: 800;
 
-	//spacings
-
 	//> tokens
-	//note bounding tokens should be in REM
-	--content-max: 920px;
-	--content-min: 280px;
+	
+	// px / 16
+	--content-max: 57.5rem; //920px;
+	--content-min: 17.5rem; //280px;
 	--content-padding: var(--gap-sm);
 	--section-max: ;
-	--section-min: ;
+	--section-min: 20rem;
+	--block-min: 25.26rem;
 
 	// --brand-clr: ;
 
-	--primary-clr: hsl(var(--yellow-5));
-	--primary-alt: hsl(var(--yellow-6));
-	--primary-bg: hsl(var(--blue-1));
+	--primary-clr: hsl(var(--orange-5));
+	--primary-clr-op: hsl(var(--orange-5), 0.2);
+	--primary-alt: hsl(var(--orange-1));
+	--primary-bg: hsl(var(--purple-1));
 
-	--secondary-clr: ;
-	--secondary-bg: hsl(var(--blue-3));
-	--secondary-alt: hsl(var(--blue-5));
+	--secondary-clr: hsl(var(--purple-5));
+	--secondary-bg: hsl(var(--purple-2));
+	--secondary-alt: hsl(var(--purple-3));
 
-	--highlight-clr: ;
-	--highlight-bg: ;
+	--highlight-clr: hsl(var(--orange-8));
+	--highlight-bg: hsl(var(--purple-5));
 
-	--font-clr: var(--white-1);
-	--font-clr-alt: var(--white-2);
+	--font-clr: hsl(var(--white-1));
+	--font-clr-alt: hsl(var(--purple-5));
 
 	--shadow-cat: ;
 	--shadow-box: ;
@@ -67,6 +77,7 @@
 	--text-sm: var(--fs-5);
 	--text-xs: var(--fs-2);
 
+	//spacings
 	//note spacer and gap values should be hard coded? (not REM)
 	--spacer-xl: 2.5rem;
 	--spacer-lg: 8rem;
@@ -131,16 +142,35 @@ img {
 	object-fit: cover;
 }
 
-a {
+a:not(.btn, nav a) {
+	position: relative;
 	color: var(--font-clr);
 	text-decoration-color: var(--primary-clr);
 	transition: text-decoration 0.2s ease-in-out;
+	text-decoration: none;
 
-	&:hover {
-		// text-decoration: none;
-		text-decoration-thickness: 0.4rem;
-		text-underline-offset: -0.4rem;
-	}
+	&::after {
+			content: '';
+			position: absolute;
+			right: 0;
+			bottom: -0.1em;
+			width: 100%;
+			height: 0.05em;
+			background-color: var(--primary-clr);
+			transform: scale(1, 1);
+			transform-origin: bottom;
+			// needs more support?
+			// translate: 0 0.1em;
+			// scale: 0 1;
+			transition: transform 220ms ease-in, background-color 420ms;
+			z-index: -1;
+		}
+
+		&:hover::after,
+		&:focus::after {
+			transform: scale(1, 10);
+			background-color: var(--primary-clr-op);
+		}
 }
 
 //todo abstract to comp.. its time
@@ -150,7 +180,7 @@ nav a {
 	border-bottom: 0.15em solid transparent;
 	color: var(--font-clr);
 	text-decoration: none;
-	transition: border 0.2s ease-in-out, color 0.5s;
+	transition: color 0.5s;
 	
 	&:hover {
 		color: var(--primary-alt);
@@ -159,32 +189,29 @@ nav a {
 	&::after {
 			content: '';
 			position: absolute;
-			left: 0;
+			right: 0;
 			bottom: -0.15em;
-			min-width: 100%;
-			border-bottom: 0.15em solid var(--white-1);
-			transform: scaleX(0);
+			width: 100%;
+			height: 0.15em;
+			background-color: var(--primary-clr);
+			transform: scale(0, 1);
 			transform-origin: right;
 			// needs more support?
 			// translate: 0 0.1em;
 			// scale: 0 1;
-			transition: transform  220ms ease-in, border 220ms;
-			pointer-events: none;
-			z-index: 1;
+			transition: transform 220ms ease-in;
 		}
 
 		&:hover::after,
 		&:focus::after {
-			transform: scaleX(1);
+			transform: scale(1, 1);
 			transform-origin: left;
-			// scale: 1 1;
-			border-bottom: 0.15em solid var(--primary-clr);
+			background-color: var(--primary-clr);
 		}
 }
 
 :not([aria-current='page']) nav a:hover {
 	text-decoration: none;
-	// border-bottom: 0.15em solid white;
 }
 
 nav a[aria-current='page'] {
@@ -213,7 +240,7 @@ p + p {
 }
 
 section:first-of-type {
-	padding-block-start: 0;
+	padding-block-start: var(--spacer-md);
 }
 
 section + section {
@@ -278,19 +305,21 @@ section + section {
 	text-decoration: none;
 
 	&:hover {
+		color: var(--white-1);
+		background-color: var(--primary-alt);
+		border-color: transparent;
 		text-decoration: none;
 	}
 
 	&-primary {
-		@extend .btn;
 		border-radius: var(--radius-btn);
 		background-color: var(--primary-clr);
+		
 	}
 
 	&-secondary {
-		@extend .btn;
 		padding: var(--btn-out);
-		color: var(--primary-alt);
+		color: var(--white);
 		border: var(--border-sm) solid var(--primary-clr);
 		border-radius: var(--radius-btn);
 	}
