--- a/src/lib/sass/global.scss
+++ b/src/lib/sass/global.scss
@@ -7,14 +7,18 @@
 	--purple-1: 222, 18%, 11%;
 	--purple-2: 231, 18%, 16%;
 	--purple-3: 231, 18%, 28%;
-	--purple-4: 240, 16%, 65%;
-	--purple-5: 240, 24%, 74%;
-	--purple-6: 240, 100%, 92%;
+	--purple-4: 237, 42%, 49%;
+	--purple-5: 238, 100%, 70%;
+	--purple-6: 240, 81%, 87%;
+
 	
+	--grey-1: 240, 17%, 60%;
+	--grey-2: 240, 24%, 74%;
+
 	--white-1: 197, 24%, 94%;
 	--white-2: 60, 10%, 92%;
 	--white-6: 240, 100%, 92%;
-	--white-7: 240, 90%, 95%;
+	--white-7: 240, 92%, 95%;
 	
 	--orange-1: 11, 61%, 42%;
 	--orange-3: 11, 96%, 61%;
@@ -48,14 +52,14 @@
 
 	// --brand-clr: ;
 
-	--primary-clr: hsl(var(--orange-5));
-	--primary-clr-op: hsl(var(--orange-5), 0.2);
-	--primary-alt: hsl(var(--orange-1));
+	--primary-clr: hsl(var(--purple-5));
+	--primary-clr-op: hsl(var(--purple-5), 0.3);
+	--primary-alt: hsl(var(--purple-4));
 	--primary-bg: hsl(var(--purple-1));
 
-	--secondary-clr: hsl(var(--purple-5));
+	--secondary-clr: hsl(var(--purple-6));
 	--secondary-bg: hsl(var(--purple-2));
-	--secondary-alt: hsl(var(--purple-4));
+	--secondary-alt: hsl(var(--grey-1));
 
 	--highlight-clr: hsl(var(--orange-8));
 	--highlight-bg: hsl(var(--purple-5));
@@ -305,13 +309,12 @@ section + section {
 	padding: var(--btn-pad);
 	display: inline-grid;
 	place-items: center;
-	color: var(--primary-bg);
+	color: var(--font-clr);
 	font-weight: var(--fw-bold);
 	text-transform: capitalize;
 	text-decoration: none;
 
 	&:hover {
-		color: var(--font-clr);
 		background-color: var(--primary-alt);
 		border-color: transparent;
 		text-decoration: none;
@@ -325,7 +328,6 @@ section + section {
 
 	&-secondary {
 		padding: var(--btn-out);
-		color: var(--font-clr);
 		border: var(--border-sm) solid var(--primary-clr);
 		border-radius: var(--radius-btn);
 	}
