--- a/src/lib/sass/global.scss
+++ b/src/lib/sass/global.scss
@@ -17,15 +17,16 @@
 
 	--white-1: 197, 24%, 94%;
 	--white-2: 60, 10%, 92%;
-	--white-6: 240, 100%, 92%;
-	--white-7: 240, 92%, 95%;
+	--white-3: 240, 50%, 95%;
+	--white-6: 240, 92%, 95%;
 	
 	--orange-1: 11, 61%, 42%;
 	--orange-3: 11, 96%, 61%;
 	--orange-5: 19, 100%, 62%;
 
 	--yellow-5: 46, 100%, 50%;
-	--yellow-6: 50, 100%, 52%;
+	--yellow-6: hsl(50, 100%, 52%);
+
 	//paragraph/fonts
 	--fs-1: 0.5rem;
 	--fs-2: 0.75rem;
@@ -41,7 +42,6 @@
 	--fw-bolder: 800;
 
 	//> tokens
-	
 	// px / 16
 	--content-max: 57.5rem; //920px;
 	--content-min: 17.5rem; //280px;
@@ -64,8 +64,8 @@
 	--highlight-clr: hsl(var(--orange-8));
 	--highlight-bg: hsl(var(--purple-5));
 
-	--font-clr: hsl(var(--white-7));
-	--font-clr-alt: hsl(var(--purple-6));
+	--font-clr: hsl(var(--white-3));
+	--font-clr-alt: hsl(var(--white-6));
 
 	--shadow-cat: ;
 	--shadow-box: ;
@@ -188,10 +188,6 @@ nav a {
 	text-decoration: none;
 	transition: color 0.5s;
 	
-	&:hover {
-		color: var(--primary-alt);
-	}
-
 	&::after {
 			content: '';
 			position: absolute;
@@ -221,7 +217,7 @@ nav a {
 }
 
 nav a[aria-current='page'] {
-	border-bottom: 0.15em solid white;
+	border-bottom: 0.15em solid var(--font-clr);
 }
 
 p {
@@ -301,6 +297,7 @@ section + section {
 .mustache {
 	color: var(--secondary-alt);
 	font-size: var(--text-sm);
+	font-weight: var(--fw-bold);
 	margin-block-end: var(--spacer-xs);
 }
 
@@ -315,14 +312,14 @@ section + section {
 	text-decoration: none;
 
 	&:hover {
-		background-color: var(--primary-alt);
 		border-color: transparent;
 		text-decoration: none;
+		background-color: var(--primary-clr);
 	}
 
 	&-primary {
 		border-radius: var(--radius-btn);
-		background-color: var(--primary-clr);
+		background-color: var(--primary-alt);
 		
 	}
 
