--- a/src/lib/sass/global.scss
+++ b/src/lib/sass/global.scss
@@ -136,8 +136,7 @@ body {
 body {
 	margin: 0;
 	color: var(--font-clr-alt);
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
-		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+	font-family:Roboto, Helvetica, Arial, sans-serif;
 	background-color: var(--primary-bg);
 }
 
